# nbt-helper

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml
docs/: README.md
docs/examples/: create_nbt_file.py
docs/minecraft/: README.md  files.md  region.md  tags.md
docs/nbt_helper/: basis.md  usage.md
nbt_convutils/nbt/: __init__.py  loaders.py  region.py  tags.py
nbt_helper/: __init__.py  file.py  region.py  tags.py
tests/: test_nbt_file.py  test_region.py  test_tags.py
tests/data/: je_uncompressed.nbt  je_zlib.nbt
tests/data/files/: je_gzip.nbt  je_uncompressed.nbt  pe_uncompressed.nbt  pe_uncompressed_with_header.nbt
tests/data/regions/: r.0.0.mca
tests/tags/: test_arrays.py  test_list_tag.py  test_primitive_tags.py  test_tag_compound.py
