[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["nbt_helper"]

[project]
name = "nbt-helper"
version = "1.0.0"
requires-python = ">= 3.9"
authors = [
  {name = "Andrii Karandashov"}
]
description = "Module for reading and writing Minecraft data files."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["Minecraft", "NBT", "Minecraft NBT", "Minecraft Java"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]

[project.urls]
Homepage = "https://github.com/AntynK/nbt-helper"
Documentation = "https://github.com/AntynK/nbt-helper/blob/master/docs"
Repository = "https://github.com/AntynK/nbt-helper.git"
Issues = "https://github.com/AntynK/nbt-helper/issues"

[project.optional-dependencies]
test = ["pytest>=7.0"]